--- a/templates/page.html
+++ b/templates/page.html
@@ -1,9 +1,1 @@
-<!doctype html>
-<html lang="en">
-	<head>
-	{{template "header.html" . }}
-	</head>
-	<body>
-	
-	</body>
-</html>
+{{template "header.html" . }}{{template "$page_name" . }}{{template "footer.html" . }}
