--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -9,22 +9,11 @@ body
 	font-family: arial;
 }
 
-@font-face {
-	font-family: 'EmojiFont';
-	src: url('https://github.com/Ranks/emojione/raw/master/assets/fonts/emojione-svg.woff2') format('woff2'),
-	url('https://github.com/Ranks/emojione/raw/master/assets/fonts/emojione-svg.woff') format('woff'), local("arial");
-}
-
+/* Patch for Edge */
 @supports (-ms-ime-align:auto) {
 .user_content
 {
-	font-family: EmojiFont, arial;
-}
-}
-@-moz-document url-prefix() {
-.user_content
-{
-	font-family: EmojiFont, arial;
+	font-family: Segoe UI Emoji, arial;
 }
 }
 
