Added the Cosmo and Cosmo Conflux themes. Freshly ported over from one of my other projects. The porting is still underway, part of it relies on functionality which hasn't be implemented in Gosora yet like sidebars and alerts.
Restructured the BBCode parser plugin.
Added the [code] tag to the BBCode parser. Disabled by default for now.
Added a benchmark for comparing performance between when [code] is enabled and when it isn't.
Tweaked the templates to make them more flexible, thus allowing a wider variety of themes.
Images of the themes can now be found in the Theme Manager.
There's an emoji on each theme row to show which themes are mobile friendly and which aren't.
Fixed editing and deleting posts on Tempra Conflux.
Moved a large portion of the inline CSS in the topic_alt template into the stylesheets.

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="rowblock">
-	<div class="rowitem"><a>{{.Title}}</a></div>
+	<div class="rowitem rowhead"><a>{{.Title}}</a></div>
 </div>
 <div class="rowblock">
 	{{range .ItemList}}<div class="rowitem passive" style="{{ if .Avatar }}background-image: url({{ .Avatar }});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 72px;{{end}}{{ if .Sticky }}background-color: #FFFFCC;{{else if .Is_Closed}}background-color: #eaeaea;{{end}}">
