--- a/templates/header.html
+++ b/templates/header.html
@@ -13,4 +13,4 @@
 	<body>
 		<div class="container">
 {{template "menu.html" .}}
-{{range .NoticeList}}<div class="alert">{{.}}</div>{{end}}
+<div id="back"><div id="main">{{range .NoticeList}}<div class="alert">{{.}}</div>{{end}}
