--- a/templates/panel-menu.html
+++ b/templates/panel-menu.html
@@ -1,5 +1,5 @@
 <div class="colblock_left">
-	<div class="rowitem"><a href="/panel/">Control Panel</a></div>
+	<div class="rowitem rowhead"><a href="/panel/">Control Panel</a></div>
 	<div class="rowitem passive"><a href="/panel/users/">Users</a></div>
 	<div class="rowitem passive"><a href="/panel/groups/">Groups</a></div>
 	{{if .CurrentUser.Perms.ManageForums}}<div class="rowitem passive"><a href="/panel/forums/">Forums</a></div>{{end}}
