--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
 	</div>
 </div>
 <div class="colblock_right">
-	<div class="rowitem"><a>Comments</a></div>
+	<div class="rowitem rowhead"><a>Comments</a></div>
 </div>
 <div class="colblock_right" style="overflow: hidden;">
 	{{range .ItemList}}
