--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
 			<!--<link rel="stylesheet" href="https://use.fontawesome.com/8670aa03ca.css">-->
-		</div>
+		</div><div style="clear: both;"></div></div></div>
 	</body>
 </html>
