--- a/templates/panel-dashboard.html
+++ b/templates/panel-dashboard.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>Dashboard</a></div>
+	<div class="rowitem rowhead"><a>Dashboard</a></div>
 </div>
 <div class="colblock_right">
 	<div class="rowitem passive">Coming Soon...</div>
