--- a/templates/panel-plugins.html
+++ b/templates/panel-plugins.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>Plugins</a></div>
+	<div class="rowitem rowhead"><a>Plugins</a></div>
 </div>
 <div class="colblock_right">
 	{{range .ItemList}}
