--- a/templates/panel-setting.html
+++ b/templates/panel-setting.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>Edit Setting</a></div>
+	<div class="rowitem rowhead"><a>Edit Setting</a></div>
 </div>
 <div class="colblock_right">
 	<form action="/panel/settings/edit/submit/{{.Something.Name}}?session={{.CurrentUser.Session}}" method="post">
