--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>Settings</a></div>
+	<div class="rowitem rowhead"><a>Settings</a></div>
 </div>
 <div class="colblock_right">
 	{{ range $key, $value := .Something }}
