--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -2,16 +2,17 @@
 {{template "panel-menu.html" . }}
 <style type="text/css">.rowitem::after {content:"";display:block;clear:both;}</style>
 <div class="colblock_right">
-	<div class="rowitem"><a>Themes</a></div>
+	<div class="rowitem rowhead"><a>Themes</a></div>
 </div>
 <div class="colblock_right">
 	{{range .ItemList}}
-	<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;">
+	<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
 		<span style="float: left;">
 			<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 20px;">{{.FriendlyName}}</a><br />
 			<small style="margin-left: 2px;">Author: {{.Creator}}</small>
 		</span>
 		<span style="float: right;">
+			{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
 			{{if .Active}}<span>Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
 		</span>
 	</div>
