--- a/templates/panel-user-edit.html
+++ b/templates/panel-user-edit.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>User Editor</a></div>
+	<div class="rowitem rowhead"><a>User Editor</a></div>
 </div>
 <div class="colblock_right">
 	<form action="/panel/users/edit/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}" method="post">
