Added an installer which automatically populates the configuration file with information you provide. It also seeds the database with the necessary tables and data. Added the likes table. This is a sign of what's to come. Improved the installation instructions in README.md Fixed the SQL in data.sql so that it no longer errors out. The Admin user now has a default password. Fixed a status indicator which I overlooked in the previous commit. The Status field for topics is now deprecated. Improved the efficiency of plugin_bbcode Added more bat and shell files to make it easier for you to get things done.

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -4,9 +4,7 @@
 </div>
 <div class="rowblock">
 	{{range .ItemList}}<div class="rowitem passive" style="{{ if .Avatar }}background-image: url({{ .Avatar }});background-position: left;background-repeat: no-repeat;background-size: 64px;padding-left: 72px;{{end}}{{ if .Sticky }}background-color: #FFFFCC;{{else if .Is_Closed}}background-color: #eaeaea;{{end}}">
-		<a href="/topic/{{.ID}}">{{.Title}}</a> {{if .Is_Closed}}<span class="username topic_status_e topic_status_closed" style="float: right;">closed</span>
-		{{else}}<span class="username hide_on_micro topic_status_e topic_status_open" style="float: right;">open</span>{{end}}
-		<span class="username hide_on_micro" style="border-right: 0;float: right;">Status</span>
+		<a href="/topic/{{.ID}}">{{.Title}}</a> {{if .Is_Closed}}<span class="username topic_status_e topic_status_closed" title="Status: Closed" style="float: right;">&#x1F512;&#xFE0E</span>{{end}}
 	</div>
 	{{else}}<div class="rowitem passive">There aren't any topics in this forum yet.</div>{{end}}
 </div>
