--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -13,7 +13,7 @@
 		</span>
 		<span style="float: right;">
 			{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
-			{{if .Active}}<span>Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
+			{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
 		</span>
 	</div>
 	{{end}}
